FIXED THE SCROLLBAR ISSUE

--- a/footer.css
+++ b/footer.css
@@ -18,9 +18,6 @@ div.footer {
 }
 
 div.footer > span {
-	padding-top: 32px;
-	padding-bottom: 32px;
-
 	width: 15vw;
 }
 
