--- a/site/site.css
+++ b/site/site.css
@@ -16,7 +16,3 @@ hr {
 div a {
 	justify-content: center;
 }
-
-body {
-	overflow-y: hidden;
-}
